force-app/main/default/objects/OB_Parametrizacion__c/OB_Parametrizacion__c.object-meta.xml
<CustomObject>
    <description>Entidad para la administración del Outbound.</description>
    <label>Parametrización</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nombre</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parametrizaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>