force-app/main/default/objects/OB_Parametrizacion__c/fields/OB_Accion_Modif__c.field-meta.xml
<CustomField>
    <fullName>OB_Accion_Modif__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Acción Modif</label>
    <length>20</length>
    <type>Text</type>
</CustomField>