force-app/main/default/objects/OB_Parametrizacion__c/fields/OB_Activo__c.field-meta.xml
<CustomField>
    <fullName>OB_Activo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Activo</label>
    <type>Checkbox</type>
</CustomField>