force-app/main/default/objects/OB_Parametrizacion__c/fields/OB_Agrupador_Plantillas__c.field-meta.xml
<CustomField>
    <fullName>OB_Agrupador_Plantillas__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agrupador de plantillas</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>OB_Parametrizacion__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agrupador de plantillas</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>OB_Parametrizacion__c</referenceTo>
    <relationshipName>Relaciones_Campanya_Producto</relationshipName>
    <type>Lookup</type>
</CustomField>