force-app/main/default/objects/OB_Parametrizacion__c/fields/OB_Alta__c.field-meta.xml
<CustomField>
    <fullName>OB_Alta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Alta</label>
    <type>Checkbox</type>
</CustomField>