force-app/main/default/objects/OB_Parametrizacion__c/fields/OB_Codigo__c.field-meta.xml
<CustomField>
    <fullName>OB_Codigo__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Código</label>
    <length>20</length>
    <type>Text</type>
</CustomField>