force-app/main/default/objects/OB_Parametrizacion__c/fields/OB_Contratacion__c.field-meta.xml
<CustomField>
    <fullName>OB_Contratacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contratación</label>
    <type>Checkbox</type>
</CustomField>