force-app/main/default/objects/OB_Parametrizacion__c/fields/OB_Envio_GDD__c.field-meta.xml
<CustomField>
    <fullName>OB_Envio_GDD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Envío a GDD</label>
    <type>Checkbox</type>
</CustomField>