force-app/main/default/objects/OB_Parametrizacion__c/fields/OB_Fecha_Expiracion__c.field-meta.xml
<CustomField>
    <fullName>OB_Fecha_Expiracion__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fecha de expiración</label>
    <type>DateTime</type>
</CustomField>