force-app/main/default/objects/OB_Parametrizacion__c/fields/OB_Formato_Contrato__c.field-meta.xml
<CustomField>
    <fullName>OB_Formato_Contrato__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Formato Contrato</label>
    <length>100</length>
    <type>Text</type>
</CustomField>