force-app/main/default/objects/OB_Parametrizacion__c/fields/OB_Idioma__c.field-meta.xml
<CustomField>
    <fullName>OB_Idioma__c</fullName>
    <label>Idioma</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Catalán</fullName>
            </value>
            <value>
                <fullName>Castellano</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>