force-app/main/default/objects/OB_Parametrizacion__c/fields/OB_Login__c.field-meta.xml
<CustomField>
    <fullName>OB_Login__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Login</label>
    <length>50</length>
    <type>Text</type>
</CustomField>