force-app/main/default/objects/OB_Parametrizacion__c/fields/OB_Modificacion__c.field-meta.xml
<CustomField>
    <fullName>OB_Modificacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Modificación</label>
    <type>Checkbox</type>
</CustomField>