force-app/main/default/objects/OB_Parametrizacion__c/fields/OB_Multimes__c.field-meta.xml
<CustomField>
    <fullName>OB_Multimes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Multi-mes</label>
    <type>Checkbox</type>
</CustomField>