force-app/main/default/objects/OB_Parametrizacion__c/fields/OB_Plantilla_Email_Defecto__c.field-meta.xml
<CustomField>
    <fullName>OB_Plantilla_Email_Defecto__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plantilla de correo por defecto</label>
    <length>100</length>
    <type>Text</type>
</CustomField>