force-app/main/default/objects/OB_Parametrizacion__c/fields/OB_Requerido__c.field-meta.xml
<CustomField>
    <fullName>OB_Requerido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requerido</label>
    <type>Checkbox</type>
</CustomField>