force-app/main/default/objects/OB_Parametrizacion__c/fields/OB_Requiere_PAN__c.field-meta.xml
<CustomField>
    <fullName>OB_Requiere_PAN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requiere PAN</label>
    <type>Checkbox</type>
</CustomField>