force-app/main/default/objects/OB_Parametrizacion__c/fields/OB_Responsable__c.field-meta.xml
<CustomField>
    <fullName>OB_Responsable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Responsable</label>
    <type>Checkbox</type>
</CustomField>