force-app/main/default/objects/OB_Parametrizacion__c/fields/OB_SMS__c.field-meta.xml
<CustomField>
    <fullName>OB_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS</label>
    <type>Checkbox</type>
</CustomField>