force-app/main/default/objects/OB_Parametrizacion__c/fields/OB_Tipo__c.field-meta.xml
<CustomField>
    <fullName>OB_Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Correo electrónico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>