force-app/main/default/objects/OB_Parametrizacion__c/fields/OB_Tipo_Cierre__c.field-meta.xml
<CustomField>
    <fullName>OB_Tipo_Cierre__c</fullName>
    <label>Tipo de cierre</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NEGATIVO</fullName>
            </value>
            <value>
                <fullName>POSITIVO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>