force-app/main/default/objects/OB_Parametrizacion__c/fields/OB_Tipo_Usuario_BackOffice__c.field-meta.xml
<CustomField>
    <fullName>OB_Tipo_Usuario_BackOffice__c</fullName>
    <label>Tipo usuario BackOffice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Validador</fullName>
            </value>
            <value>
                <fullName>Contratador</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>