force-app/main/default/objects/OB_Parametrizacion__c/fields/OB_Usuario_Gestor__c.field-meta.xml
<CustomField>
    <fullName>OB_Usuario_Gestor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Usuario Gestor</label>
    <referenceTo>OB_Parametrizacion__c</referenceTo>
    <relationshipName>Parametrizaciones3</relationshipName>
    <type>Lookup</type>
</CustomField>