force-app/main/default/objects/OB_Parametrizacion__c/fields/OB_Validacion__c.field-meta.xml
<CustomField>
    <fullName>OB_Validacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validación</label>
    <type>Checkbox</type>
</CustomField>