force-app/main/default/objects/OB_Parametrizacion__c/fields/OB_Validar_Condiciones__c.field-meta.xml
<CustomField>
    <fullName>OB_Validar_Condiciones__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Validar Condiciones</label>
    <length>20</length>
    <type>Text</type>
</CustomField>