force-app/main/default/objects/OB_Parametrizacion__c/recordTypes/OB_Agrupador_Plantillas.recordType-meta.xml
<RecordType>
    <fullName>OB_Agrupador_Plantillas</fullName>
    <active>true</active>
    <label>Agrupador de plantillas</label>
</RecordType>