force-app/main/default/objects/OB_Parametrizacion__c/recordTypes/OB_Campanya.recordType-meta.xml
<RecordType>
    <fullName>OB_Campanya</fullName>
    <active>true</active>
    <label>Campaña</label>
</RecordType>