force-app/main/default/objects/OB_Parametrizacion__c/recordTypes/OB_Condicion_Contractual.recordType-meta.xml
<RecordType>
    <fullName>OB_Condicion_Contractual</fullName>
    <active>true</active>
    <label>Condición Contractual</label>
</RecordType>