force-app/main/default/objects/OB_Parametrizacion__c/recordTypes/OB_Familia_Producto.recordType-meta.xml
<RecordType>
    <fullName>OB_Familia_Producto</fullName>
    <active>true</active>
    <label>Familia de producto</label>
</RecordType>