force-app/main/default/objects/OB_Parametrizacion__c/recordTypes/OB_Grupo_BackOffice.recordType-meta.xml
<RecordType>
    <fullName>OB_Grupo_BackOffice</fullName>
    <active>false</active>
    <label>Grupo BackOffice</label>
</RecordType>