force-app/main/default/objects/OB_Parametrizacion__c/recordTypes/OB_Plantilla_Comunicacion.recordType-meta.xml
<RecordType>
    <fullName>OB_Plantilla_Comunicacion</fullName>
    <active>true</active>
    <label>Plantilla Comunicación</label>
</RecordType>