force-app/main/default/objects/OB_Parametrizacion__c/recordTypes/OB_Plantilla_Tipo_Idioma.recordType-meta.xml
<RecordType>
    <fullName>OB_Plantilla_Tipo_Idioma</fullName>
    <active>true</active>
    <label>Plantilla por tipo e idioma</label>
</RecordType>