force-app/main/default/objects/OB_Parametrizacion__c/recordTypes/OB_Plataforma.recordType-meta.xml
<RecordType>
    <fullName>OB_Plataforma</fullName>
    <active>true</active>
    <label>Plataforma</label>
</RecordType>