force-app/main/default/objects/OB_Parametrizacion__c/recordTypes/OB_Producto.recordType-meta.xml
<RecordType>
    <fullName>OB_Producto</fullName>
    <active>true</active>
    <label>Producto</label>
</RecordType>