force-app/main/default/objects/OB_Parametrizacion__c/recordTypes/OB_Producto_Asociado.recordType-meta.xml
<RecordType>
    <fullName>OB_Producto_Asociado</fullName>
    <active>true</active>
    <label>Producto Asociado</label>
</RecordType>