force-app/main/default/objects/OB_Parametrizacion__c/recordTypes/OB_Relacion_Campanya_Producto.recordType-meta.xml
<RecordType>
    <fullName>OB_Relacion_Campanya_Producto</fullName>
    <active>true</active>
    <label>Relación Campaña - Producto</label>
</RecordType>