force-app/main/default/objects/OB_Parametrizacion__c/recordTypes/OB_Resultado_Cierre.recordType-meta.xml
<RecordType>
    <fullName>OB_Resultado_Cierre</fullName>
    <active>true</active>
    <label>Resultado de cierre</label>
</RecordType>