force-app/main/default/objects/OB_Parametrizacion__c/recordTypes/OB_Usuario_Contratador.recordType-meta.xml
<RecordType>
    <fullName>OB_Usuario_Contratador</fullName>
    <active>true</active>
    <label>Usuario Contratador</label>
</RecordType>