force-app/main/default/objects/OB_Parametrizacion__c/recordTypes/OB_Usuario_Validador.recordType-meta.xml
<RecordType>
    <fullName>OB_Usuario_Validador</fullName>
    <active>false</active>
    <label>Usuario validador</label>
</RecordType>