force-app/main/default/objects/OB_Parametrizacion__c/validationRules/Validaciones_Agrupador_Plantillas.validationRule-meta.xml
<ValidationRule>
    <fullName>Validaciones_Agrupador_Plantillas</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
   RecordType.DeveloperName = &apos;OB_Agrupador_Plantillas&apos;,
   OR (
      AND (
         OB_Email__c,
         ISBLANK(OB_Plantilla_Email_Defecto__c)
      ),
      AND (
         OB_SMS__c,
         ISBLANK(OB_Plantilla_SMS_Defecto__c)
      )
   )
)</errorConditionFormula>
    <errorMessage>Datos incorrectos</errorMessage>
</ValidationRule>