force-app/main/default/objects/OB_Parametrizacion__c/validationRules/Validaciones_Grupo_BackOffice.validationRule-meta.xml
<ValidationRule>
    <fullName>Validaciones_Grupo_BackOffice</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
   RecordType.DeveloperName = &apos;OB_Grupo_BackOffice&apos;,
   Name = &apos;PENDIENTE GRUPO&apos;
)</errorConditionFormula>
    <errorMessage>Datos incorrectos</errorMessage>
</ValidationRule>