force-app/main/default/objects/OB_Parametrizacion__c/validationRules/Validaciones_Plantilla_Tipo_Idioma.validationRule-meta.xml
<ValidationRule>
    <fullName>Validaciones_Plantilla_Tipo_Idioma</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
   RecordType.DeveloperName = &apos;OB_Plantilla_Tipo_Idioma&apos;,
   OR (
      ISPICKVAL(OB_Tipo__c, &apos;&apos;),
      ISPICKVAL(OB_Idioma__c, &apos;&apos;),
      ISBLANK(OB_Plantilla__c),
      ISBLANK(OB_Parametrizacion_Padre__c)
   )
)</errorConditionFormula>
    <errorMessage>Datos incorrectos</errorMessage>
</ValidationRule>