force-app/main/default/objects/OB_Parametrizacion__c/validationRules/Validaciones_Plataforma.validationRule-meta.xml
<ValidationRule>
    <fullName>Validaciones_Plataforma</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
   RecordType.DeveloperName = &apos;OB_Plataforma&apos;,
   OR (
      ISBLANK(OB_Codigo_Externo__c),
      LEN(OB_Centro_Gestor__c) != 5,
      NOT(BEGINS(OB_Usuario_Salesforce__r.EmployeeNumber, &apos;U01&apos;))
   )
)</errorConditionFormula>
    <errorMessage>Datos incorrectos</errorMessage>
</ValidationRule>