force-app/main/default/objects/OB_Parametrizacion__c/validationRules/Validaciones_Producto.validationRule-meta.xml
<ValidationRule>
    <fullName>Validaciones_Producto</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
   RecordType.DeveloperName = &apos;OB_Producto&apos;,
   OR (
      ISBLANK(OB_Parametrizacion_Padre__c),
      ISBLANK(OB_Codigo_Externo__c),
      OB_Fecha_Expiracion__c &lt;=  OB_Fecha_Activacion__c
   )
)</errorConditionFormula>
    <errorMessage>Datos incorrectos</errorMessage>
</ValidationRule>