force-app/main/default/objects/OB_Parametrizacion__c/validationRules/Validaciones_Relacion_Campanya_Producto.validationRule-meta.xml
<ValidationRule>
    <fullName>Validaciones_Relacion_Campanya_Producto</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
   RecordType.DeveloperName = &apos;OB_Relacion_Campanya_Producto&apos;,
   OR (
      ISBLANK(OB_Parametrizacion_Padre__c),
      ISBLANK(OB_Parametrizacion_Relacionada__c),
      ISPICKVAL(OB_Tipo_Validacion__c, &apos;&apos;)
   )
)</errorConditionFormula>
    <errorMessage>Datos incorrectos</errorMessage>
</ValidationRule>