force-app/main/default/objects/OB_Parametrizacion__c/validationRules/Validaciones_Resultados_Cierre.validationRule-meta.xml
<ValidationRule>
    <fullName>Validaciones_Resultados_Cierre</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
   RecordType.DeveloperName = &apos;OB_Resultado_Cierre&apos;,
   OR (
      ISPICKVAL(OB_Tipo_Contratacion__c, &apos;&apos;),
      ISPICKVAL(OB_Tipo_Cierre__c, &apos;&apos;)
   )
)</errorConditionFormula>
    <errorMessage>Los campos &quot;Tipo de contratación&quot; y &quot;Tipo de cierre&quot; son obligatorios</errorMessage>
</ValidationRule>