force-app/main/default/objects/OB_Parametrizacion__c/listViews/OB_Familias_Producto.listView-meta.xml
<ListView>
    <fullName>OB_Familias_Producto</fullName>
    <columns>NAME</columns>
    <columns>OB_Requiere_PAN__c</columns>
    <columns>OB_Envio_GDD__c</columns>
    <columns>OB_Codigo_GDD__c</columns>
    <columns>OB_Area_ALF__c</columns>
    <columns>OB_Accion_Alta__c</columns>
    <columns>OB_Formato_Codigo_Contrato__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>OB_Parametrizacion__c.OB_Familia_Producto</value>
    </filters>
    <label>Familias de producto</label>
</ListView>