force-app/main/default/objects/OB_Parametrizacion__c/listViews/OB_Plantillas_Por_Tipo_Idioma.listView-meta.xml
<ListView>
    <fullName>OB_Plantillas_Por_Tipo_Idioma</fullName>
    <columns>NAME</columns>
    <columns>OB_Plantilla__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>OB_Parametrizacion__c.OB_Plantilla_Tipo_Idioma</value>
    </filters>
    <label>Plantillas por tipo e idioma</label>
</ListView>