force-app/main/default/objects/OB_Parametrizacion__c/listViews/OB_Plataformas.listView-meta.xml
<ListView>
    <fullName>OB_Plataformas</fullName>
    <columns>NAME</columns>
    <columns>OB_Activo__c</columns>
    <columns>OB_Codigo_Externo__c</columns>
    <columns>OB_Centro_Gestor__c</columns>
    <columns>OB_Usuario_Salesforce__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>OB_Parametrizacion__c.OB_Plataforma</value>
    </filters>
    <label>Plataformas</label>
    <sharedTo>
        <role>OB_Generico</role>
    </sharedTo>
</ListView>