force-app/main/default/objects/OB_Parametrizacion__c/listViews/OB_Relaciones_Campanya_Producto.listView-meta.xml
<ListView>
    <fullName>OB_Relaciones_Campanya_Producto</fullName>
    <columns>OB_Activo__c</columns>
    <columns>OB_Envio_GDD__c</columns>
    <columns>NAME</columns>
    <columns>OB_Parametrizacion_Padre__c</columns>
    <columns>OB_Parametrizacion_Relacionada__c</columns>
    <columns>OB_Tipo_Validacion__c</columns>
    <columns>OB_Agrupador_Plantillas__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>OB_Parametrizacion__c.OB_Relacion_Campanya_Producto</value>
    </filters>
    <label>Relaciones Campaña - Producto</label>
</ListView>