force-app/main/default/objects/OB_Parametrizacion__c/listViews/OB_Resultados_Cierre.listView-meta.xml
<ListView>
    <fullName>OB_Resultados_Cierre</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>OB_Parametrizacion__c.OB_Resultado_Cierre</value>
    </filters>
    <label>Resultados de cierre</label>
</ListView>